src/test/ui/const-generics/const_evaluatable_checked/from-sig-fail.stderr
error: failed to evaluate the given constant
  --> $DIR/from-sig-fail.rs:9:5
   |
LL | fn test<const N: usize>() -> [u8; N - 1] {
   |                                   ----- required by this bound in `test`
...
LL |     test::<0>();
   |     ^^^^^^^^^

error: failed to evaluate the given constant
  --> $DIR/from-sig-fail.rs:9:5
   |
LL | fn test<const N: usize>() -> [u8; N - 1] {
   |                                   ----- required by this bound in `test`
...
LL |     test::<0>();
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors

